--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.1",
     "husky": "^2.3.0",
     "prettier": "1.17.1",
     "pretty-quick": "^1.10.0"
